# cod2e2

./: .gitignore  LICENSE  README.md  compare_templates.sh  compare_templates_with_delta.sh
base/: .dockerignore  README.md
base/.devcontainer/: Dockerfile  devcontainer.json
base/lib/: run_docker_compose_command.sh
development_base/: .dockerignore  .env  README.md  docker-compose.dev.yml
development_base/.devcontainer/: config  devcontainer.json  docker-compose.template.yml  docker-compose.yml  generate_docker_compose.sh  reset_extension_volumes.sh
languages/: README.md
languages/latex/.devcontainer/: Dockerfile
languages/latex/src/: first-example.dvi
languages/markdown-preview-enhanced-plantuml/: README.md
languages/plantuml/: .env  README.md
languages/plantuml/.devcontainer/: .gitignore  config  (+4 more)
languages/python/: .env  .gitignore  README.md
languages/python-jupyter/: .env
languages/python/src/: Dockerfile  docker-compose.yml  output_stderr.py  pyproject.toml
languages/python/src/src/: hello.py  output_stderr.py
latex/: README.md
latex/.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
markdown-plantuml/: README.md
markdown-plantuml/.devcontainer/: devcontainer.json
markdown-preview-enhanced-plantuml/.devcontainer/: Dockerfile  devcontainer.json
python/: .dockerignore  README.md  requirements.example.txt
python/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
tools/: README.md  check_external_difference.sh  check_internal_difference.sh  clone_template.sh  derive_template.sh
(+32 files in other folders)
